# shool

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Docker-build/app/: Dockerfile
my_school/: .env.template  main.py  prestart.sh  run.py  run_main.py
my_school/actions/: create_superuser.py
my_school/alembic/: env.py
my_school/alembic/versions/: 2025_08_01_2017-5678ef54819f_create_all_table.py  2025_08_02_1434-9bcd710ac47c_create_school_subject_table.py  2025_08_03_1305-a03d9f250b1c_create_table_day_shool_and_corrected_.py  2025_08_07_1140-118c8fcb38d0_create_all_table.py  2025_08_07_1248-39e00d46517a_create_table_access_token.py
my_school/api/: __init__.py  day_school.py  student.py  subject.py  user.py
my_school/api/CRUD/: crud_day.py  crud_student.py  crud_subject.py
my_school/api/api_v1/: __init__.py  day_school.py  student.py  subject.py
my_school/api/api_v2/: __init__.py  auth.py  fastapi_users_router.py  messages.py  users.py
my_school/api/dependencies/: fastapi_users_router.py  strategy.py  users.py
my_school/api/dependencies/auntification/: __init__.py  (+3 more)
my_school/core/: config.py
my_school/core/auntefication/: transport.py  user_manager.py
my_school/core/gunicorn_app/: app_options.py  application.py  logger.py
my_school/core/model/: __init__.py  access_token.py  base.py  day_school.py  helper_db.py  school_subjects.py  student.py  students_school.py  students_subject.py  user.py
my_school/core/schemas/: schema_day.py  schema_school_subject.py  schema_student.py
my_school/utils/: __init__.py
tests/: test_hello.py
(+2 files in other folders)
