[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.42"
alembic = "^1.16.4"
asyncpg = "^0.30.0"
gunicorn = "^23.0.0"
redis = "^6.3.0"
fastapi-cache2 = "^0.2.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

